clusters/sno/applications/frigate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  labels:
    app.kubernetes.io/name: frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frigate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frigate
    spec:
      serviceAccountName: frigate
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.18.0@sha256:9678a83a76e4730ac7d9ea7428370e32ae656d6b312aaad30d6c69f3fef14d35
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /config/config.yml
              subPath: config.yml
            - name: media
              mountPath: /media/frigate
            - name: recordings
              mountPath: /media/frigate/recordings
      volumes:
        - name: config
          secret:
            secretName: config
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: recordings
          persistentVolumeClaim:
            claimName: recordings-pvc
