clusters/sno/applications/frigate/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-tailscale
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: frigate
      port:
        number: 5000
